# pyOpenNFT-WangLab

./: .gitignore  README.md  buildext.py  pyproject.toml  rest_interface.py  rtQA.mat  setup_spm.py
check_python_matlab/: A_L_R_iL.mat  chol_inv_test.py
docs/: conf.py  index.rst  install.rst  install_pycharm.rst  troubleshooting.rst
opennft/: __init__.py  _logging.py  colors.py  config.py  constants.py  errors.py  eventrecorder.py  excepthook  filewatcher.py  iglm_vol.py  img2Dvol3D.py  logging.py  mapimagewidget.py  modif_kalman.py  mrroi.py  mrtimeseries.py  mrvol.py  nfbcalc.py  nft_classes_stub.py  nftconfig.py  nftsession.py  prepare_orth_view.py  projview.py  realign.py  reslice.py  rtqa.py  rtqa_calc.py  rtqa_gui.py  scale_time_series.py  setting_utils.py  smoothing.py  update_orth_view.py  utils.py  version.py  volviewformation.py
opennft/configs/: NF_PSC_cont_155.ini  NF_SVM_cont_215.ini  auto_config.ini  auto_config.json  auto_rtqa_settings.ini  opennft.config.yaml  opennft.logging.yaml
opennft/ui/: opennft.ui  opennft_ui.py
projects/: config.ini  opennft.ui  opennft_calc.py  opennft_console_proj.py  opennft_gui.py  opennft_gui_proj.py  opennft_proj.py
src/: bsplines.c  bsplines.h  pyspm.cpp  spm_bsplinc.c  spm_bsplinc.cpp  spm_bsplinc.h  spm_bsplins.c  spm_bsplins.cpp  spm_bsplins.h  spm_mapping.c  spm_mapping.cpp  spm_mapping.h  spm_slice_vol.h  spm_vol_access.c  spm_vol_access.cpp  spm_vol_access.h  spm_vol_utils.cpp
tests/: conftest.py  testRTexp.py
tests/filewatcher/: test_fw.py  test_fw_1.py
tests/opennft/: test_nftconfig.py
tests/pyspm/: test_iglm.py  test_mc_dcm.py  test_mc_nii.py  test_orth_vol.py  test_reslice.py  test_smoothing.py  test_spm.py
tests/pyspm/matlab/: iGlmVol.m  iglm_test.m  mc_series.m  mc_series_dcm.m  orth_vol_test.m  prepVol_test.m  prepareOrthView.m  realign_reslice.m  smooth_test.m  spm_realign_rt.m  spm_reslice_rt.m  updateOrthView.m
tests/pyspm/read_reslice_realign/: mc_series.m  mc_series_dcm.m  re_ad_and_align_and_slice.m  realign_reslice.m  spm_reslice_rt.m
tests/read_reslice_realign/: P.mat
